--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "jquery": "^3.1.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "angular2-moment": "^1.2.0"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-beta.30",
@@ -45,6 +46,7 @@
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
     "typescript": "~2.0.3",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "angular2-moment": "^1.2.0"
   }
 }
