--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --proxy-config proxy-config.json" ,
+    "start": "ng serve --host 0.0.0.0 --proxy-config proxy-config.json",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
@@ -20,13 +20,16 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/socket.io-client": "^1.4.29",
     "angular2-moment": "^1.2.0",
+    "angular2-websocket": "^0.9.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "file-loader": "^0.10.1",
     "jquery": "^3.1.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
+    "typescript": "^2.2.1",
     "url-loader": "^0.5.7",
     "zone.js": "^0.7.2"
   },
