--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "@types/socket.io-client": "^1.4.29",
     "angular2-moment": "^1.2.0",
     "angular2-websocket": "^0.9.1",
+    "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "express": "^4.15.2",
     "file-loader": "^0.10.1",
     "jquery": "^3.1.1",
+    "morgan": "^1.8.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "typescript": "^2.2.1",
