--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "^0.10.1",
     "jquery": "^3.1.1",
     "morgan": "^1.8.1",
+    "ngx-clipboard": "^3.0.5",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "typescript": "^2.2.1",
