--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
-    "@types/socket.io-client": "^1.4.29",
-    "angular2-moment": "^1.2.0",
+    "angular2-moment": "^1.3.0",
     "angular2-websocket": "^0.9.1",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
@@ -32,22 +31,19 @@
     "jquery": "^3.1.1",
     "morgan": "^1.8.1",
     "ngx-clipboard": "^3.0.5",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "typescript": "^2.2.1",
     "url-loader": "^0.5.7",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.0",
+    "@angular/cli": "1.0.0-rc.2",
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "angular2-moment": "^1.2.0",
+    "@types/node": "^6.0.65",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
-    "jquery": "^3.1.1",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
@@ -55,14 +51,13 @@
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
+    "typescript": "~2.0.2",
     "tslint": "^4.3.0",
-    "typescript": "~2.0.3",
     "webpack-dev-server": "~2.3.0",
     "autoprefixer": "^6.5.3",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.26.4",
     "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
-    "file-loader": "^0.10.0",
     "json-loader": "^0.5.4",
     "karma-sourcemap-loader": "^0.3.7",
     "less-loader": "^2.2.3",
@@ -74,7 +69,6 @@
     "source-map-loader": "^0.1.5",
     "istanbul-instrumenter-loader": "^2.0.0",
     "style-loader": "^0.13.1",
-    "stylus-loader": "^2.4.0",
-    "url-loader": "^0.5.7"
+    "stylus-loader": "^2.5.1"
   }
 }
